--- a/theme/delete.html
+++ b/theme/delete.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a href="/" class="header__logo">
                 <img src="assets/logo.svg" />
-                <h1>StudyBuddy</h1>
+                <h1>studynotedy</h1>
             </a>
             <form class="header__search">
                 <label>
